ingress-hello-world-tls-production.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-hello-world-tls-production
  namespace: ricoh
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - rcp-k8s.zkpytug.com
    secretName: ingress-cert-zkpytugcom
  rules:
  - host: "rcp-k8s.zkpytug.com"
    http:
      paths:
      - path: /petstore(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: petstore
            port:
              number: 8080
      - path: /spring-boot-server(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: spring-boot-server
            port:
              number: 8080
      - path: /generated-server(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: generated-server
            port:
              number: 8080
      - path: /hello-world-one(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: aks-helloworld-one
            port:
              number: 80
      - path: /hello-world-two(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: aks-helloworld-two
            port:
              number: 80
      - path: /(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: aks-helloworld-one
            port:
              number: 80
